<resources>
    <string name="app_name">Clock Draw</string>
    <string name="reset_clock">00:00:00</string>
    <string name="start">Start</string>
    <string name="back">Back</string>
    <string name="hour">Giờ</string>
    <string name="minute">Phút</string>
    <string name="second">Giây</string>
    <string name="ccontinue">Continue</string>
    <string name="pause">Pause</string>
</resources>