<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context=".TimerActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textHour"
            android:layout_width="105dp"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:text="@string/hour"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textMinute"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textAlignment="center"
            android:text="@string/minute"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textSecond"
            android:layout_width="105dp"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:text="@string/second"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="40dp">

        <NumberPicker
            android:id="@+id/NP_hour"
            android:layout_width="85dp"
            android:layout_height="240dp"
            android:layout_marginTop="180dp"
            android:layout_marginStart="30dp"
            android:theme="@style/AppTheme.Picker" />

        <NumberPicker
            android:id="@+id/NP_minute"
            android:layout_width="85dp"
            android:layout_height="240dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="40dp"
            android:theme="@style/AppTheme.Picker" />

        <NumberPicker
            android:id="@+id/NP_second"
            android:layout_width="85dp"
            android:layout_height="240dp"
            android:layout_marginTop="180dp"
            android:theme="@style/AppTheme.Picker" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSet"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:background="@drawable/timer_button"
        android:layout_marginTop="30dp"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
        android:minHeight="54dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <NumberPicker
        android:id="@+id/NP_hour"
        android:layout_width="76dp"
        android:layout_height="238dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="180dp"
        android:theme="@style/AppTheme.Picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/NP_minute"
        android:layout_width="75dp"
        android:layout_height="238dp"
        android:layout_marginTop="180dp"
        android:theme="@style/AppTheme.Picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/NP_second"
        android:layout_width="81dp"
        android:layout_height="238dp"
        android:layout_marginStart="284dp"
        android:layout_marginTop="180dp"
        android:theme="@style/AppTheme.Picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textMinute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="580dp"
        android:text="@string/minute"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="296dp"
        android:layout_marginBottom="580dp"
        android:text="@string/hour"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="580dp"
        android:text="@string/second"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavView"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSet"
        android:layout_width="89dp"
        android:layout_height="83dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="228dp"
        android:background="@drawable/round_button"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
  
</androidx.constraintlayout.widget.ConstraintLayout>